--- a/frontend/src/Styles/toggle.css
+++ b/frontend/src/Styles/toggle.css
@@ -89,7 +89,7 @@ h2{
     height: 30px;
 }
 
-td,tr{
+.tablePrilo>table>tbody>tr,.tablePrilo>table>tbody>tr>td{
     border:1px solid rgb(255, 255, 255);
 }
 
