--- a/frontend/src/Styles/SingleObject.css
+++ b/frontend/src/Styles/SingleObject.css
@@ -1,5 +1,9 @@
 *{box-sizing: border-box;}
 
+body{
+    background-color: rgb(255, 255, 255);
+}
+
 .Single_Object_Wrapper{
     background-color: rgb(212, 212, 212);
     display: grid;
