--- a/frontend/src/Styles/archive.css
+++ b/frontend/src/Styles/archive.css
@@ -1,12 +1,12 @@
 body{
-    background-color: rgb(234, 245, 255);
+    margin: 0;
+    padding:0;
 }
-
 .main>.input>input{
     width:100%;
     height: 30px;
     border-radius: 5px;
-    border:2px solid #91b7ff;
+    border:2px solid #6c7b98;
     display: flex;
 }
 
@@ -24,4 +24,14 @@ body{
 .objects{
     width: 100%;
     margin-top: 50px;
+}
+
+.wrapp_archive{
+    margin-top: -5px;
+    height: 100vh;
+    background-color: rgb(165 185 225);
+}
+
+.wrapp_archive>h1{
+    color:#efefef;
 }
