--- a/frontend/src/Styles/createObject.css
+++ b/frontend/src/Styles/createObject.css
@@ -1,3 +1,5 @@
+
+
 h1,h3,h4{
     text-align: center;
 }
@@ -19,6 +21,7 @@ textarea{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    background-color: rgb(245, 245, 245);
 }
 
 .photo_ingines{
